<resources>
    <string name="app_name">回家</string>

    <string name="title_name">标题名标题名标题名标题名标题名标题名标题名标题名标题名标题名标题名标题名标题名标题名标题名标题名标题名标题名</string>
    <string name="title_menu_left_txt_name">菜单</string>



    <string name="main_menu_item_index">首页</string>
    <string name="main_menu_item_lostchild">失联\n儿童</string>
    <string name="main_menu_item_task">任务</string>
    <string name="main_menu_item_myinfo">我的</string>
    <string name="main_menu_item_publish">发布</string>



</resources>
