<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:id="@+id/navi_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_bar_height"
        android:layout_alignParentBottom="true"
        >
        <!-- *** 底部导航栏左侧菜单项 *** -->
        <View
            android:id="@+id/bound"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1p"
            android:background="@color/font_color_999999"
            />
        <TextView
            android:id="@+id/main"
            android:layout_width="@dimen/common_title_bar_height"
            android:layout_height="@dimen/common_title_bar_height"
            android:text="@string/main_menu_item_index"
            android:textColor="@color/font_color_999999"
            android:textSize="@dimen/font_14"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            />
        <View
            android:id="@+id/navi_div1"
            android:layout_width="@dimen/size_1p"
            android:layout_height="@dimen/common_title_bar_height"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/main"
            android:background="@color/font_color_999999"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/lost_child"
            android:layout_toRightOf="@id/main"
            android:layout_width="@dimen/common_title_bar_height"
            android:layout_height="@dimen/common_title_bar_height"
            android:text="@string/main_menu_item_lostchild"
            android:textColor="@color/font_color_999999"
            android:maxEms="2"
            android:textSize="@dimen/font_14"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_alignParentBottom="true"
            />
        <View
            android:id="@+id/navi_div2"
            android:layout_width="@dimen/size_1p"
            android:layout_height="@dimen/common_title_bar_height"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/lost_child"
            android:background="@color/font_color_999999"
            android:visibility="gone"
            />
        <!-- *** 底部导航栏右侧菜单项 *** -->
        <TextView
            android:id="@+id/myinfo"
            android:layout_width="@dimen/common_title_bar_height"
            android:layout_height="@dimen/common_title_bar_height"
            android:text="@string/main_menu_item_myinfo"
            android:textColor="@color/font_color_999999"
            android:textSize="@dimen/font_14"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            />
        <View
            android:id="@+id/navi_div3"
            android:layout_width="@dimen/size_1p"
            android:layout_height="@dimen/common_title_bar_height"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@id/myinfo"
            android:background="@color/font_color_999999"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/task"
            android:layout_toLeftOf="@id/myinfo"
            android:layout_width="@dimen/common_title_bar_height"
            android:layout_height="@dimen/common_title_bar_height"
            android:text="@string/main_menu_item_task"
            android:textColor="@color/font_color_999999"
            android:maxEms="2"
            android:textSize="@dimen/font_14"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_alignParentBottom="true"
            />
        <View
            android:id="@+id/navi_div4"
            android:layout_width="@dimen/size_1p"
            android:layout_height="@dimen/common_title_bar_height"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@id/task"
            android:background="@color/font_color_999999"
            android:visibility="gone"
            />

    </RelativeLayout>
    <FrameLayout
        android:id="@+id/container"
        android:layout_above="@id/navi_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    </FrameLayout>


    <RelativeLayout
        android:id="@+id/publish"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/common_title_bar_height"
        android:layout_height="@dimen/common_title_bar_height"
        android:layout_marginBottom="@dimen/size_12"
        android:background="@drawable/selecter_white_round"
        android:layout_alignParentBottom="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_item_publish"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/size_8"
            android:textSize="@dimen/font_10"
            />
    </RelativeLayout>
</RelativeLayout>
